2002-03-24  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c : Speed improvements.

2002-03-23  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c (lp_qp_solver_init): Implemented `Assume Integer'
	functionality.

2002-03-22  Jody Goldberg <jody@gnome.org>

	* solver.c (solver_param_new) : init input_cells, and constraints to
	NULL.  It is not strictly necessary but makes me feel good.

2002-03-22  Jody Goldberg <jody@gnome.org>

	* reports-write.c (solver_program_report) : suppress warning.
	(solver_performance_report) : fix typo.

2002-03-22  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* api.c (w_lp_solve_set_option): Max time setting added.

	* solver.c (lp_qp_solver_init): Added start time argument.
	(solver_run): Fixed the user and system time reporting.  Passes
	now the start time to lp_qp_solver_init.

	* reports-write.c (solver_performance_report): Added rounding of
	real time.

2002-03-20  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c (solver_results_init): Bug fix: Allocate using total #
	of constructors.

	* api.c (w_lp_solve_set_option): Added max iteration setting.

2002-03-19  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* api.[ch], reports.c, solver.c : Started the implementation of QP
	program reporting.

2002-03-18  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* reports.c, solver.c, reports-write.c: More clean up.

	* reports.c, solver.c, reports-write.c: Made find_name static.

	* reports-write.[ch]: Created.  reports-write.c should contain
	writing only.  The logic will move into reports.c.

	* reports.c: Moved lots of stuff to reports-write.c.

	* solver.c: Started adding support for QP.

2002-03-17  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c, reporst.c: Started adding allowable changes for
	constraints in the sensitivity report.

	* reports.c, solver.c, api.c: Implemented support for bool constraints.

	* solver.c, api.c : Implemented the support for non-negativity